--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <body>
     <h1>Hello world</h1>
-    <p>I'm hosted with Github Pages.</p>
+    <p>My name is Aine O'Reilly and I am a senior at Virginia Tech.</p>
+    <p>I am a big fan of Addison Rae.</p>
+    <p>this is my first <b>paragraph</b></p>
+    <p>I am practicing <i>italics</i></p>
+    <p>this is <b>another</b>paragraph</p>
 </body>
 </html>
